# firstFastApi

./: .env.sample  .gitignore  README.md  ai.py  app.py  hello.py  pyproject.toml  web_app.py
core/: utils.py
core/exceptions/: __init__.py  data_exceptions.py
core/utils/: csv_reader.py  pandas_reader.py  tabulate_reader.py
fake_data/: __init__.py  creatures.py
models/: creatures.py
src/: app.py
src/data/: creature.py  explorer.py  init_db.py  user.py
src/fake/: __init__.py  creature.py  explorer.py  user.py
src/model/: creature.py  user.py
src/service/: creature.py  explorer.py  user.py
src/web/: creature.py  explorer.py  user.py
template/: list.html
test/unit/data/: test_creature.py
test/unit/service/: test_creature.py
